--- a/html/register.html
+++ b/html/register.html
@@ -50,6 +50,7 @@
   <footer>
     <p>© 2025 ChambApp — Conectando talento con oportunidades.</p>
   </footer>
+  <script src="/js/auth.js"></script>
 
 </body>
 </html>
