--- a/html/login.html
+++ b/html/login.html
@@ -37,6 +37,7 @@
   <footer>
     <p>© 2025 ChambApp — Conectando talento con oportunidades.</p>
   </footer>
+  <script src="/js/auth.js"></script>
 
 </body>
 </html>
