--- a/html/dashboard_worker.html
+++ b/html/dashboard_worker.html
@@ -86,5 +86,7 @@
   <footer>
     <p>© 2025 ChambApp — Conectando talento con oportunidades.</p>
   </footer>
+  <script src="/js/dashboard_worker.js"></script>
+
 </body>
-</html
+</html>
