--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -67,5 +67,7 @@
   <footer>
     <p>© 2025 ChambApp — Conectando talento con oportunidades.</p>
   </footer>
+  <script src="/js/dashboard.js"></script>
+
 </body>
 </html>
