--- a/html/dashboard_worker.html
+++ b/html/dashboard_worker.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Tareas</a></li>
-        <li><a href="#">Chat</a></li>
+        <li><a href="/html/chat.html">Chat</a></li>
         <li><a href="#">Perfil</a></li>
       </ul>
     </nav>
