--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -12,7 +12,7 @@
     <div class="logo">ChambApp</div>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="/html/dashboard.html">Inicio</a></li>
         <li><a href="#">Mis tareas</a></li>
         <li><a href="/html/chat.html">Chat</a></li>
         <li><a href="#">Perfil</a></li>
