--- a/html/dashboard_worker.html
+++ b/html/dashboard_worker.html
@@ -12,7 +12,7 @@
     <div class="logo">ChambApp</div>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li><a href="/html/dashboard_worker.html">Inicio</a></li>
         <li><a href="#">Tareas</a></li>
         <li><a href="/html/chat.html">Chat</a></li>
         <li><a href="#">Perfil</a></li>
