--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,9 @@
     <!-- 🔹 ESPACIO PARA IMAGEN DEL MOCKUP -->
     <div class="hero-image">
       <!-- Aquí irá la imagen o ilustración -->
-      <div class="image-placeholder">Espacio para imagen del mockup</div>
+      <div class="image-placeholder">
+        <img src="/images/logo.jpeg" width="400" height="400">
+      </div>
     </div>
   </section>
 
